--- a/todokVer2/requirements.txt
+++ b/todokVer2/requirements.txt
@@ -17,7 +17,7 @@ jwt==1.3.1
 konlpy==0.6.0
 lxml==5.3.0
 mysqlclient==2.2.4
-numpy==2.1.0
+numpy==1.26.2
 outcome==1.3.0.post0
 packaging==24.1
 pandas==2.2.2
@@ -41,3 +41,5 @@ tzdata==2024.1
 urllib3==2.2.2
 websocket-client==1.8.0
 wsproto==1.2.0
+transformers==4.44.2
+torch==2.2.0
