--- a/todokVer2/requirements.txt
+++ b/todokVer2/requirements.txt
@@ -29,6 +29,7 @@ requests==2.32.3
 scikit-learn==1.5.1
 scipy==1.14.1
 selenium==4.23.1
+selenium-stealth==1.0.6
 six==1.16.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
@@ -38,6 +39,7 @@ trio==0.26.2
 trio-websocket==0.11.1
 typing_extensions==4.12.2
 tzdata==2024.1
+undetected-chromedriver==3.5.5
 urllib3==2.2.2
 websocket-client==1.8.0
 wsproto==1.2.0
