--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,17 +10,35 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - name: Get Github Actions IP
+      id: ip
+      uses: haythem/public-ip@v1.2
+
+    - name: Configure AWS Credentials
+      uses: aws-actions/configure-aws-credentials@v1
+      with:
+        aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+        aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        aws-region: ap-northeast-2
+
+    - name: Add Github Actions IP to Security group
+      run: |
+        aws ec2 authorize-security-group-ingress --group-id ${{ secrets.AWS_SG_ID }} --protocol tcp --port 22 --cidr ${{ steps.ip.outputs.ipv4 }}/32
+          
     - name: Checkout Repository
       uses: actions/checkout@v4  # 최신 코드 가져오기
 
     - name: Deploy to EC2
       uses: appleboy/ssh-action@v1.0.3  # EC2에 SSH 접속
       with:
-        host: ${{ secrets.REMOTE_IP }} # 인스턴스 IP
-        username: ${{ secrets.REMOTE_USER }} # 사용자
+        host: ${{ secrets.EC2_HOST }} # 인스턴스 IP
+        username: ${{ secrets.EC2_USER }} # 사용자
         key: ${{ secrets.REMOTE_PRIVATE_KEY }} # ec2 instance pem key
-        port: ${{ secrets.REMOTE_SSH_PORT }} # 접속포트
         script: |
           cd server_version2/todokVer2  # 프로젝트 폴더로 이동
           git pull origin main  # 최신 코드 가져오기
           sudo systemctl restart uwsgi  # 서비스 재시작
+
+    - name: Remove Github Actions IP From Security Group
+      run: |
+        aws ec2 revoke-security-group-ingress --group-id ${{ secrets.AWS_SG_ID }} --protocol tcp --port 22 --cidr ${{ steps.ip.outputs.ipv4 }}/32
