--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
       uses: actions/checkout@v4  # 최신 코드 가져오기
 
     - name: Deploy to EC2
-      uses: appleboy/ssh-action@v1.0.3  # EC2에 SSH 접속
+      uses: appleboy/ssh-action@master  # EC2에 SSH 접속
       with:
         host: ${{ secrets.EC2_HOST }} # 인스턴스 IP
         username: ${{ secrets.EC2_USER }} # 사용자
